--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ h1 {color:red;margin-bottom:30px;text-align:center;}
 </head>
 <body>
 <h1>Phong Hub Key System</h1>
-<a href="https://direct-link.net/1450725/tKhX3dciJGda" class="btn" target="_blank" onclick="setBypass()">Get Key</a>
+<a href="https://link4m.com/k5rS6rkT" class="btn" target="_blank" onclick="setBypass()">Get Key</a>
 
 <script>
 // Lưu thời gian click Get Key để checkpoint kiểm tra
