--- a/key.html
+++ b/key.html
@@ -1,82 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
-<meta charset="UTF-8">
-<title>Key</title>
-<style>
-body {
-  margin: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #111;
-  color: #fff;
-  font-family: Arial;
-}
-.box {
-  background: #1c1c1c;
-  padding: 20px;
-  border-radius: 8px;
-  text-align: center;
-  width: 280px;
-}
-.code {
-  margin: 15px 0;
-  padding: 10px;
-  background: #000;
-  border-radius: 5px;
-  user-select: none;
-}
-button {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  background: #00c853;
-  color: #000;
-  font-size: 15px;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Embed CoinMaster</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    html, body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
+  </style>
 </head>
 <body>
-
-<div class="box">
-  <div>You code is</div>
-  <div class="code" id="code">Loading</div>
-  <button onclick="copyKey()">Copy</button>
-</div>
-
-<script>
-history.replaceState(null, "", location.pathname)
-
-fetch("keys.json")
-.then(r => r.json())
-.then(d => {
-  const k = d.keys
-  document.getElementById("code").innerText = k[Math.floor(Math.random() * k.length)]
-})
-
-function copyKey() {
-  const key = document.getElementById("code").innerText
-  navigator.clipboard.writeText(key)
-
-  history.replaceState(null, "", "https://google.com")
-  location.replace("https://google.com")
-}
-
-window.onpageshow = function(e) {
-  if (e.persisted) {
-    window.close()
-    location.replace("about:blank")
-  }
-}
-
-window.onpopstate = function() {
-  window.close()
-  location.replace("about:blank")
-}
-</script>
-
+  <iframe
+    src="https://coinmaster-8.preview.emergentagent.com"
+    allowfullscreen>
+  </iframe>
 </body>
 </html>
